@@ -9,19 +9,12 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclOO.h,v 1.10 2010/03/05 15:32:16 dkf Exp $
+ * RCS: @(#) $Id: tclOO.h,v 1.11 2010/06/02 08:22:15 nijtmans Exp $
  */
 
 #ifndef TCLOO_H_INCLUDED
 #define TCLOO_H_INCLUDED
 #include "tcl.h"
-
-#if defined(BUILD_tcloo)
-#	define TCLOOAPI DLLEXPORT
-#	undef USE_TCLOO_STUBS
-#else
-#	define TCLOOAPI DLLIMPORT
-#endif
 
 /*
  * Be careful when it comes to versioning; need to make sure that the
